# ComfyUI_ACE-Step

./: README-CN.md  README.md  __init__.py  ace_step_nodes.py  pipeline_ace_step.py  pyproject.toml  requirements.txt  text2lyric.py
ace_models/lyrics_utils/: lyric_tokenizer.py
ace_step/: cpu_offload.py  data_sampler.py  pipeline_ace_step.py  text2music_dataset.py
ace_step/ace_models/: ace_step_transformer.py  attention.py
ace_step/ace_models/lyrics_utils/: lyric_encoder.py  lyric_tokenizer.py
ace_step/language_segmentation/: LangSegment.py
ace_step/music_dcae/: music_dcae_pipeline.py  music_vocoder.py
ace_step/schedulers/: scheduling_flow_match_euler_discrete.py  scheduling_flow_match_heun_discrete.py  scheduling_flow_match_pingpong.py
models/lyrics_utils/: lyric_tokenizer.py
workflow-examples/: ACE-edit.json  ACE-gen-automated-composition.json  ACE-gen-lora-custom.json  ACE-gen-lora.json  ACE-lyrics-language-switch.json  ACE-rapainting.json  ACE-reference-audio.json  AEC-extend.json  ace-step-gen.json  edit.json  extend.json  lyrics-language-switch.json  repainting.json
